https://online.sbis.ru/opendoc.html?guid=da3f86bc-729e-4047-8c36-7f338a51fa7c&des= Ошибка в разработку 01.08.2017 Нелокализованные строки в БТР.…

--- a/components/lang/en-US/en-US.json
+++ b/components/lang/en-US/en-US.json
@@ -37,6 +37,7 @@
    "Для графика-области надо определить 3 поля данных (ws-series.sourceField)": "For graphics-area need to define 3 data fields (ws-series.sourceField)",
    "Для завершения обработки команды вам необходимо указать количество записей": "To complete processing, you must specify the number of records",
    "Добавить таблицу": "Add table",
+   "Дополнительный": "Additional",
    "Дополнительный текст": "Additional text",
    "Еще...": "More...",
    "Ещё": "More",
@@ -44,10 +45,12 @@
    "Заголовок": "Title",
    "Загрузить еще": "Load more",
    "Загрузка": "Loading",
+   "Заменить": "Replace",
    "Зачеркнутый": "Strikeout",
    "Зеленый": "Green",
    "Избранные": "Favorites",
    "Инвертировать": "Invert",
+   "Изменить размер": "Change size",
    "История ввода": "Input history",
    "Итоги операции: \"Объединения\"": "The results of the operation: \"Merge\"",
    "Итого": "Total",
@@ -69,6 +72,7 @@
    "ОперацииНадЗаписями@@Удалить записи?": "Remove items?",
    "ОперацииНадЗаписями@@Удалить текущую запись?": "Remove current item?",
    "Операция займет продолжительное время. Провести операцию?": "Operation will take long time. Perform operation?",
+   "Основной": "Main",
    "Основной текст": "Main text",
    "Отбираются": "Selected",
    "Отмена": "Cancel",
@@ -108,6 +112,7 @@
    "Синий": "Blue",
    "Смайлики": "Emoticons",
    "Смена режима календаря на годовой": "Change the calendar mode to an annual",
+   "Сменить шаблон": "Change template",
    "Снять": "Remove",
    "Сохранение": "Saving",
    "Сохранить": "Save",
@@ -116,7 +121,9 @@
    "Список в Excel": "List to Excel",
    "Список в PDF": "List to PDF",
    "Ср": "Wed",
+   "Стили": "Styles",
    "Стиль текста": "Text style",
+   "Стиль и цвет": "Style and color",
    "Суммирование": "Summation",
    "Текущую страницу": "Current page",
    "Убрать ссылку": "Remove link",
