--- a/components/lang/en-US/en-US.json
+++ b/components/lang/en-US/en-US.json
@@ -108,7 +108,7 @@
    "СНИЛС должен состоять из 11 цифр": "INILA should consist of 11 digits",
    "Сб": "Sat",
    "Сбросить": "Reset",
-   "Свойства": 'Properties',
+   "Свойства": "Properties",
    "Серый": "Gray",
    "Синий": "Blue",
    "Смайлики": "Emoticons",
