https://online.sbis.ru/opendoc.html?guid=853a5f35-ea3b-4f39-b83a-65f499cfee88&des= Ошибка в разработку 08.08.2017 Предупреждение СТАН Ошибки локализации Файл: online-ext.s3cldПравило: Конфликты в словаре локализаци…

--- a/components/lang/en-US/en-US.json
+++ b/components/lang/en-US/en-US.json
@@ -137,7 +137,7 @@
    "Что сохранить в": "What save to",
    "Чтобы продолжить редактирование, нажмите 'Отмена'.": "For continue editing tap 'Cancel'.",
    "Шаг вперед": "Step forward",
-   "Шаг назад": "Step back",
+   "Шаг назад": "Back",
    "Ширина": "Width",
    "алчный": "money",
    "влюблен": "inlove",
