Поправил "шаг вперед"

--- a/components/lang/en-US/en-US.json
+++ b/components/lang/en-US/en-US.json
@@ -136,7 +136,7 @@
    "Что напечатать": "What to print",
    "Что сохранить в": "What save to",
    "Чтобы продолжить редактирование, нажмите 'Отмена'.": "For continue editing tap 'Cancel'.",
-   "Шаг вперед": "Step forward",
+   "Шаг вперед": "Forward",
    "Шаг назад": "Back",
    "Ширина": "Width",
    "алчный": "money",
