https://online.sbis.ru/opendoc.html?guid=bde656b8-d049-4ccc-83c0-7028d9336b1a

--- a/lang/en-US/en-US.json
+++ b/lang/en-US/en-US.json
@@ -7,6 +7,7 @@
    "html-разметка": "html-markup",
    "Адрес": "Address",
    "В поле требуется ввести адрес электронной почты": "Please enter email address",
+   "Время заполнено некорректно": "Time is incorrect",
    "Внимание! Кирилический тэг без замены": "Attention! Cyrillic tag without replacing",
    "Внимание! Операция необратима": "Attention! The operation is irreversible",
    "Вс": "Sun",
@@ -30,8 +31,10 @@
    "Выравнивание текста": "Text alignment",
    "Высота": "Height",
    "Год должен быть больше 1400": "Year must be more than 1400",
+   "Да": "Yes",
    "Данные не загружены": "Data are not loaded",
    "Дата заполнена некорректно": "Date filled incorrectly",
+   "Дата или время заполнены некорректно": "Date or time is incorrect",
    "Дата конца периода должна быть больше даты начала.": "The end of the period must be greater than the start date.",
    "Дата начала периода не может быть больше даты окончания": "The start date period can not be more than the end date",
    "Для графика-области надо определить 3 поля данных (ws-series.sourceField)": "For graphics-area need to define 3 data fields (ws-series.sourceField)",
@@ -66,9 +69,11 @@
    "Не выбрано": "Not selected",
    "Не выбрано ни одной записи для перемещения": "Have not been selected rows for move",
    "Неверная контрольная сумма СНИЛС": "Invalid checksum INILA",
+   "Нет": "No",
    "Некорректно заполнены обязательные поля!": "Incorrect values in required fields",
    "Объединение наименований": "Combining titles",
    "Объединить": "Join",
+   "ОК": "OK",
    "ОперацииНадЗаписями@@Удалить записи?": "Remove items?",
    "ОперацииНадЗаписями@@Удалить текущую запись?": "Remove current item?",
    "Операция займет продолжительное время. Провести операцию?": "Operation will take long time. Perform operation?",
@@ -79,6 +84,7 @@
    "Отменить": "Cancel",
    "Отметить": "Select",
    "Отмечено": "Selected",
+   "Отмечено 1000 записей, максимально допустимое количество, обрабатываемое системой СБИС.": "1000 records selected, it's the maximum possible number processed by SBIS",
    "Отобрать": "Select",
    "Очистить все": "Clear all",
    "Ошибка в параметрах метода БЛ": "Error in the parameters of the BL method",
