https://online.sbis.ru/opendoc.html?guid=8dac92a1-42fd-4f90-9c87-e8c5c18fe20c

--- a/lang/en-US/en-US.json
+++ b/lang/en-US/en-US.json
@@ -177,5 +177,6 @@
    "тупица": "dump",
    "улыбка": "smile",
    "умник": "nerd",
-   "шокирован": "shocked"
+   "шокирован": "shocked",
+   "Показать": "Show"
 }
