--- a/lang/en-US/en-US.json
+++ b/lang/en-US/en-US.json
@@ -177,5 +177,6 @@
    "тупица": "dump",
    "улыбка": "smile",
    "умник": "nerd",
-   "шокирован": "shocked"
+   "шокирован": "shocked",
+   "Очистить результаты поиска": "Clear search"
 }
