https://online.sbis.ru/opendoc.html?guid=15862737-14fd-479c-9de9-3e3c57ad86b8

--- a/Controls/lang/en/en.json
+++ b/Controls/lang/en/en.json
@@ -65,6 +65,7 @@
   "Отмечено": "Marked",
   "Отмечено всё": "Marked all",
   "Отобрать": "Select",
+  "Показать отмеченные": "Show marked",
   "Отчёт будет доступен для всех сотрудников": "The report will be available for all employees",
   "Очистить": "Clear",
   "Параметры": "Parameters",
